Revert "Syncing"