@@ -18,6 +18,7 @@
  */
 package org.apache.pinot.client;
 
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -52,7 +53,7 @@ public class DynamicBrokerSelectorTest {
       throws Exception {
     openMocks(this);
     Map<String, List<String>> tableToBrokerListMap = new HashMap<>();
-    tableToBrokerListMap.put("table1", List.of("broker1"));
+    tableToBrokerListMap.put("table1", Collections.singletonList("broker1"));
     when(_mockExternalViewReader.getTableToBrokersMap()).thenReturn(tableToBrokerListMap);
     _dynamicBrokerSelectorUnderTest = Mockito.spy(new DynamicBrokerSelector(ZK_SERVER) {
       @Override
@@ -107,8 +108,8 @@ public class DynamicBrokerSelectorTest {
     assertEquals("broker1", result);
 
     Map<String, List<String>> tableToBrokerListMap = new HashMap<>();
-    tableToBrokerListMap.put("table1", List.of("broker1"));
-    tableToBrokerListMap.put("db1.table1", List.of("broker2"));
+    tableToBrokerListMap.put("table1", Collections.singletonList("broker1"));
+    tableToBrokerListMap.put("db1.table1", Collections.singletonList("broker2"));
     when(_mockExternalViewReader.getTableToBrokersMap()).thenReturn(tableToBrokerListMap);
     _dynamicBrokerSelectorUnderTest.handleDataChange("dataPath", "data");
     result = _dynamicBrokerSelectorUnderTest.selectBroker("db1.table1");
@@ -126,7 +127,7 @@ public class DynamicBrokerSelectorTest {
 
   @Test
   public void testSelectBrokerForNullTableAndEmptyBrokerListRef() {
-    when(_mockExternalViewReader.getTableToBrokersMap()).thenReturn(Map.of());
+    when(_mockExternalViewReader.getTableToBrokersMap()).thenReturn(Collections.emptyMap());
     _dynamicBrokerSelectorUnderTest.handleDataChange("dummy-data-path", "dummy-date");
 
     String result = _dynamicBrokerSelectorUnderTest.selectBroker(null);
@@ -136,7 +137,7 @@ public class DynamicBrokerSelectorTest {
 
   @Test
   public void testSelectBrokerForNonNullTableAndEmptyBrokerListRef() {
-    when(_mockExternalViewReader.getTableToBrokersMap()).thenReturn(Map.of());
+    when(_mockExternalViewReader.getTableToBrokersMap()).thenReturn(Collections.emptyMap());
     _dynamicBrokerSelectorUnderTest.handleDataChange("dummy-data-path", "dummy-date");
 
     String result = _dynamicBrokerSelectorUnderTest.selectBroker("dummyTableName");
@@ -159,7 +160,7 @@ public class DynamicBrokerSelectorTest {
   @Test
   public void testSelectBrokerWithInvalidTable() {
     Map<String, List<String>> tableToBrokerListMap = new HashMap<>();
-    tableToBrokerListMap.put("table1", List.of("broker1"));
+    tableToBrokerListMap.put("table1", Collections.singletonList("broker1"));
     when(_mockExternalViewReader.getTableToBrokersMap()).thenReturn(tableToBrokerListMap);
     _dynamicBrokerSelectorUnderTest.handleDataChange("dataPath", "data");
     String result = _dynamicBrokerSelectorUnderTest.selectBroker("invalidTable");
@@ -169,7 +170,7 @@ public class DynamicBrokerSelectorTest {
   @Test
   public void testSelectBrokerWithTwoTablesOneInvalid() {
     Map<String, List<String>> tableToBrokerListMap = new HashMap<>();
-    tableToBrokerListMap.put("table1", List.of("broker1"));
+    tableToBrokerListMap.put("table1", Collections.singletonList("broker1"));
     when(_mockExternalViewReader.getTableToBrokersMap()).thenReturn(tableToBrokerListMap);
     _dynamicBrokerSelectorUnderTest.handleDataChange("dataPath", "data");
     String result = _dynamicBrokerSelectorUnderTest.selectBroker("table1", "invalidTable");
