@@ -18,6 +18,7 @@
  */
 package org.apache.pinot.core.query.aggregation.function;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import org.apache.pinot.common.request.context.ExpressionContext;
@@ -45,7 +46,7 @@ public class CountMVAggregationFunction extends CountAggregationFunction {
 
   @Override
   public List<ExpressionContext> getInputExpressions() {
-    return List.of(_expression);
+    return Collections.singletonList(_expression);
   }
 
   @Override
