@@ -18,6 +18,7 @@
  */
 package org.apache.pinot.core.operator.filter;
 
+import java.util.Collections;
 import java.util.List;
 import org.testng.Assert;
 import org.testng.annotations.Test;
@@ -43,7 +44,7 @@ public class BaseFilterOperatorTest {
     TestFilterOperator testFilterOperator = new TestFilterOperator(docIds, nullDocIds, numDocs);
 
     Assert.assertEquals(TestUtils.getDocIds(testFilterOperator.getTrues()), List.of(0, 1, 2, 3));
-    Assert.assertEquals(TestUtils.getDocIds(testFilterOperator.getFalses()), List.of());
+    Assert.assertEquals(TestUtils.getDocIds(testFilterOperator.getFalses()), Collections.emptyList());
   }
 
   @Test
@@ -53,7 +54,7 @@ public class BaseFilterOperatorTest {
     TestFilterOperator testFilterOperator = new TestFilterOperator(docIds, numDocs);
     Assert.assertEquals(TestUtils.getDocIds(testFilterOperator.getTrues()),
         List.of(0, 1, 2, 3, 4, 5, 6, 7, 8, 9));
-    Assert.assertEquals(TestUtils.getDocIds(testFilterOperator.getFalses()), List.of());
+    Assert.assertEquals(TestUtils.getDocIds(testFilterOperator.getFalses()), Collections.emptyList());
   }
 
   @Test
@@ -61,7 +62,7 @@ public class BaseFilterOperatorTest {
     int numDocs = 10;
     int[] docIds = new int[]{};
     TestFilterOperator testFilterOperator = new TestFilterOperator(docIds, numDocs);
-    Assert.assertEquals(TestUtils.getDocIds(testFilterOperator.getTrues()), List.of());
+    Assert.assertEquals(TestUtils.getDocIds(testFilterOperator.getTrues()), Collections.emptyList());
     Assert.assertEquals(TestUtils.getDocIds(testFilterOperator.getFalses()),
         List.of(0, 1, 2, 3, 4, 5, 6, 7, 8, 9));
   }
@@ -72,8 +73,8 @@ public class BaseFilterOperatorTest {
     int[] docIds = new int[]{};
     int[] nullDocIds = new int[]{0, 1, 2, 3, 4, 5, 6, 7, 8, 9};
     TestFilterOperator testFilterOperator = new TestFilterOperator(docIds, nullDocIds, numDocs);
-    Assert.assertEquals(TestUtils.getDocIds(testFilterOperator.getTrues()), List.of());
-    Assert.assertEquals(TestUtils.getDocIds(testFilterOperator.getFalses()), List.of());
+    Assert.assertEquals(TestUtils.getDocIds(testFilterOperator.getTrues()), Collections.emptyList());
+    Assert.assertEquals(TestUtils.getDocIds(testFilterOperator.getFalses()), Collections.emptyList());
   }
 
   @Test
