@@ -22,6 +22,7 @@ import java.io.ByteArrayOutputStream;
 import java.io.File;
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import org.apache.avro.file.DataFileStream;
 import org.apache.avro.generic.GenericDatumWriter;
@@ -41,8 +42,10 @@ import org.slf4j.LoggerFactory;
 import static org.apache.pinot.core.realtime.impl.fakestream.FakeStreamConfigUtils.unpackAvroTarFile;
 
 
-/// Implementation of [PartitionGroupConsumer] for fake stream
-/// Unpacks tar files in /resources/data/On_Time_Performance_2014_partition\_<partition>.tar.gz as source of messages
+/**
+ * Implementation of {@link PartitionGroupConsumer} for fake stream
+ * Unpacks tar files in /resources/data/On_Time_Performance_2014_partition_<partition>.tar.gz as source of messages
+ */
 public class FakePartitionLevelConsumer implements PartitionGroupConsumer {
   private static final Logger LOGGER = LoggerFactory.getLogger(FakePartitionLevelConsumer.class);
 
@@ -94,7 +97,7 @@ public class FakePartitionLevelConsumer implements PartitionGroupConsumer {
   public MessageBatch fetchMessages(StreamPartitionMsgOffset startOffset, int timeoutMs) {
     int startOffsetInt = (int) ((LongMsgOffset) startOffset).getOffset();
     if (startOffsetInt >= _messageOffsets.size()) {
-      return new FakeStreamMessageBatch(List.of(), List.of(), startOffsetInt);
+      return new FakeStreamMessageBatch(Collections.emptyList(), Collections.emptyList(), startOffsetInt);
     }
     int endOffsetInt = Math.min(startOffsetInt + _defaultBatchSize, _messageOffsets.size());
     return new FakeStreamMessageBatch(_messageBytes.subList(startOffsetInt, endOffsetInt),
@@ -106,8 +109,10 @@ public class FakePartitionLevelConsumer implements PartitionGroupConsumer {
       throws IOException {
   }
 
-  /// Partitions the raw data
-  /// This can be abstracted out and injected via stream configs to incorporate custom partitioning logic
+  /**
+   * Partitions the raw data
+   * This can be abstracted out and injected via stream configs to incorporate custom partitioning logic
+   */
   public int getPartitionNumber(int recordNumber, int numPartitions) {
     return recordNumber % numPartitions;
   }
