@@ -25,6 +25,7 @@ import java.io.FileWriter;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
@@ -42,17 +43,28 @@ import org.apache.pinot.spi.utils.JsonUtils;
 import org.intellij.lang.annotations.Language;
 
 
-/// The `QueryGenerator` class is used to generate random equivalent Pinot and H2 query pairs based on Avro
-/// files.
-///
-/// - Supports COMPARISON, IN and BETWEEN predicate for both single-value and multi-value columns.
-///   - For multi-value columns, does not support NOT EQUAL and NOT IN.
-///   - The reason for this restriction is that number of elements in multi-value columns is not fixed.
-/// - Supports single-value data type: BOOLEAN, INT, LONG, FLOAT, DOUBLE, STRING.
-/// - Supports multi-value data type: INT, LONG, FLOAT, DOUBLE, STRING.
-/// - Supports aggregation function: SUM, MIN, MAX, AVG, COUNT, DISTINCTCOUNT.
-///   - SUM, MIN, MAX, AVG can only work on numeric single-value columns.
-///   - COUNT, DISTINCTCOUNT can work on any single-value columns.
+/**
+ * The <code>QueryGenerator</code> class is used to generate random equivalent Pinot and H2 query pairs based on Avro
+ * files.
+ * <ul>
+ *   <li>
+ *     Supports COMPARISON, IN and BETWEEN predicate for both single-value and multi-value columns.
+ *     <ul>
+ *       <li>For multi-value columns, does not support NOT EQUAL and NOT IN.</li>
+ *       <li>The reason for this restriction is that number of elements in multi-value columns is not fixed.</li>
+ *     </ul>
+ *   </li>
+ *   <li>Supports single-value data type: BOOLEAN, INT, LONG, FLOAT, DOUBLE, STRING.</li>
+ *   <li>Supports multi-value data type: INT, LONG, FLOAT, DOUBLE, STRING.</li>
+ *   <li>
+ *     Supports aggregation function: SUM, MIN, MAX, AVG, COUNT, DISTINCTCOUNT.
+ *     <ul>
+ *       <li>SUM, MIN, MAX, AVG can only work on numeric single-value columns.</li>
+ *       <li>COUNT, DISTINCTCOUNT can work on any single-value columns.</li>
+ *     </ul>
+ *   </li>
+ * </ul>
+ */
 public class QueryGenerator {
   // Configurable variables.
   private static final int MAX_NUM_SELECTION_COLUMNS = 3;
@@ -97,11 +109,13 @@ public class QueryGenerator {
   private boolean _skipMultiValuePredicates = false;
   private boolean _useMultistageEngine = false;
 
-  /// Constructor for `QueryGenerator`.
-  ///
-  /// @param avroFiles list of Avro files.
-  /// @param pinotTableName Pinot table name.
-  /// @param h2TableName H2 table name.
+  /**
+   * Constructor for <code>QueryGenerator</code>.
+   *
+   * @param avroFiles list of Avro files.
+   * @param pinotTableName Pinot table name.
+   * @param h2TableName H2 table name.
+   */
   public QueryGenerator(List<File> avroFiles, String pinotTableName, String h2TableName) {
     _pinotTableName = pinotTableName;
     _h2TableName = h2TableName;
@@ -167,10 +181,12 @@ public class QueryGenerator {
     prepareToGenerateQueries();
   }
 
-  /// Helper method to store an Avro value into the valid SQL String value set.
-  ///
-  /// @param valueSet value set.
-  /// @param avroValue Avro value.
+  /**
+   * Helper method to store an Avro value into the valid SQL String value set.
+   *
+   * @param valueSet value set.
+   * @param avroValue Avro value.
+   */
   private static void storeAvroValueIntoValueSet(Set<String> valueSet, Object avroValue) {
     if (avroValue instanceof Number) {
       // For Number object, store raw value.
@@ -181,10 +197,12 @@ public class QueryGenerator {
     }
   }
 
-  /// Helper method to join several [String] elements with ' '.
-  ///
-  /// @param elements elements to be joined.
-  /// @return joined result.
+  /**
+   * Helper method to join several {@link String} elements with ' '.
+   *
+   * @param elements elements to be joined.
+   * @return joined result.
+   */
   private static String joinWithSpaces(String... elements) {
     StringBuilder stringBuilder = new StringBuilder();
     for (String element : elements) {
@@ -195,13 +213,15 @@ public class QueryGenerator {
     return stringBuilder.substring(0, stringBuilder.length() - 1);
   }
 
-  /// Sample main class for the query generator.
-  ///
-  /// @param args arguments.
+  /**
+   * Sample main class for the query generator.
+   *
+   * @param args arguments.
+   */
   public static void main(String[] args)
       throws Exception {
     File avroFile = new File("pinot-integration-tests/src/test/resources/On_Time_On_Time_Performance_2014_1.avro");
-    QueryGenerator queryGenerator = new QueryGenerator(List.of(avroFile), "mytable", "mytable");
+    QueryGenerator queryGenerator = new QueryGenerator(Collections.singletonList(avroFile), "mytable", "mytable");
     File outputFile = new File(
         "pinot-integration-tests/src/test/resources/On_Time_On_Time_Performance_2014_100k_subset.test_queries_10K.sql");
     try (BufferedWriter writer = new BufferedWriter(new FileWriter(outputFile))) {
@@ -216,9 +236,11 @@ public class QueryGenerator {
     }
   }
 
-  /// Helper method to read in an Avro file and add data to the storage.
-  ///
-  /// @param avroFile Avro file.
+  /**
+   * Helper method to read in an Avro file and add data to the storage.
+   *
+   * @param avroFile Avro file.
+   */
   private void addAvroData(File avroFile) {
     // Read in records and update the values stored.
     GenericDatumReader<GenericRecord> datumReader = new GenericDatumReader<>();
@@ -270,10 +292,11 @@ public class QueryGenerator {
     }
   }
 
-  /// Helper method to finish initialization of the `QueryGenerator`, removing multi-value columns with too
-  /// many elements and dumping storage into the final map from column name to list of column values.
-  ///
-  /// Called after all Avro data loaded.
+  /**
+   * Helper method to finish initialization of the <code>QueryGenerator</code>, removing multi-value columns with too
+   * many elements and dumping storage into the final map from column name to list of column values.
+   * <p>Called after all Avro data loaded.
+   */
   private void prepareToGenerateQueries() {
     Iterator<String> columnNameIterator = _columnNames.iterator();
     while (columnNameIterator.hasNext()) {
@@ -294,9 +317,11 @@ public class QueryGenerator {
     _columnToValueSet.clear();
   }
 
-  /// Set whether to skip predicates on multi-value columns.
-  ///
-  /// @param skipMultiValuePredicates whether to skip predicates on multi-value columns.
+  /**
+   * Set whether to skip predicates on multi-value columns.
+   *
+   * @param skipMultiValuePredicates whether to skip predicates on multi-value columns.
+   */
   public void setSkipMultiValuePredicates(boolean skipMultiValuePredicates) {
     _skipMultiValuePredicates = skipMultiValuePredicates;
   }
@@ -305,11 +330,13 @@ public class QueryGenerator {
     _useMultistageEngine = useMultistageEngine;
   }
 
-  /// Helper method to pick a random value from the values list.
-  ///
-  /// @param list values list.
-  /// @param <T> type of the value.
-  /// @return randomly picked value.
+  /**
+   * Helper method to pick a random value from the values list.
+   *
+   * @param list values list.
+   * @param <T> type of the value.
+   * @return randomly picked value.
+   */
   private <T> T pickRandom(List<T> list) {
     return list.get(RANDOM.nextInt(list.size()));
   }
@@ -318,16 +345,20 @@ public class QueryGenerator {
     return _useMultistageEngine ? _multistageSingleValuePredicateGenerators : _singleValuePredicateGenerators;
   }
 
-  /// Generate one selection or aggregation query.
-  ///
-  /// @return generated query.
+  /**
+   * Generate one selection or aggregation query.
+   *
+   * @return generated query.
+   */
   public Query generateQuery() {
     return pickRandom(_queryGenerationStrategies).generateQuery();
   }
 
-  /// Helper method to generate a predicate query fragment.
-  ///
-  /// @return generated predicate query fragment.
+  /**
+   * Helper method to generate a predicate query fragment.
+   *
+   * @return generated predicate query fragment.
+   */
   private PredicateQueryFragment generatePredicate() {
     // Generate at most MAX_NUM_PREDICATES predicates.
     int predicateCount = RANDOM.nextInt(MAX_NUM_PREDICATES + 1);
@@ -350,7 +381,7 @@ public class QueryGenerator {
 
     if (predicateCount < 2) {
       // No need to join.
-      return new PredicateQueryFragment(predicates, List.of());
+      return new PredicateQueryFragment(predicates, Collections.emptyList());
     } else {
       // Join predicates with ANDs and ORs.
       List<QueryFragment> operators = new ArrayList<>(predicateCount - 1);
@@ -379,39 +410,51 @@ public class QueryGenerator {
     String generateH2Query();
   }
 
-  /// Query generation strategy interface with capability of generating query using specific strategy.
+  /**
+   * Query generation strategy interface with capability of generating query using specific strategy.
+   */
   private interface QueryGenerationStrategy {
 
-    /// Generate a query using specific strategy.
-    ///
-    /// @return generated query.
+    /**
+     * Generate a query using specific strategy.
+     *
+     * @return generated query.
+     */
     Query generateQuery();
   }
 
-  /// Predicate generator interface with capability of generating a predicate query fragment on a column.
+  /**
+   * Predicate generator interface with capability of generating a predicate query fragment on a column.
+   */
   private interface PredicateGenerator {
 
-    /// Generate a predicate query fragment on a column.
-    ///
-    /// @param columnName          column name.
-    /// @param useMultistageEngine
-    /// @return generated predicate query fragment.
+    /**
+     * Generate a predicate query fragment on a column.
+     *
+     * @param columnName          column name.
+     * @param useMultistageEngine
+     * @return generated predicate query fragment.
+     */
     QueryFragment generatePredicate(String columnName, boolean useMultistageEngine);
   }
 
-  /// Selection query.
+  /**
+   * Selection query.
+   */
   private class SelectionQuery implements Query {
     final List<String> _projectionColumns;
     final PredicateQueryFragment _predicate;
     final OrderByQueryFragment _orderBy;
     final LimitQueryFragment _limit;
 
-    /// Constructor for `SelectionQuery`.
-    ///
-    /// @param projectionColumns projection columns.
-    /// @param orderBy order by fragment.
-    /// @param predicate predicate fragment.
-    /// @param limit limit fragment.
+    /**
+     * Constructor for <code>SelectionQuery</code>.
+     *
+     * @param projectionColumns projection columns.
+     * @param orderBy order by fragment.
+     * @param predicate predicate fragment.
+     * @param limit limit fragment.
+     */
     public SelectionQuery(List<String> projectionColumns, PredicateQueryFragment predicate,
         OrderByQueryFragment orderBy, LimitQueryFragment limit) {
       _projectionColumns = projectionColumns;
@@ -437,7 +480,9 @@ public class QueryGenerator {
     }
   }
 
-  /// Aggregation query.
+  /**
+   * Aggregation query.
+   */
   private class AggregationQuery implements Query {
     final List<String> _aggregateColumnsAndFunctions;
     final PredicateQueryFragment _predicate;
@@ -445,13 +490,15 @@ public class QueryGenerator {
     final Set<String> _groupColumns;
     final LimitQueryFragment _limit;
 
-    /// Constructor for `AggregationQuery`.
-    ///
-    /// @param aggregateColumnsAndFunctions aggregation functions.
-    /// @param predicate predicate fragment.
-    /// @param groupColumns group-by columns.
-    /// @param havingPredicate having predicate fragment.
-    /// @param limit limit fragment.
+    /**
+     * Constructor for <code>AggregationQuery</code>.
+     *
+     * @param aggregateColumnsAndFunctions aggregation functions.
+     * @param predicate predicate fragment.
+     * @param groupColumns group-by columns.
+     * @param havingPredicate having predicate fragment.
+     * @param limit limit fragment.
+     */
     public AggregationQuery(List<String> aggregateColumnsAndFunctions, PredicateQueryFragment predicate,
         Set<String> groupColumns, HavingQueryFragment havingPredicate, LimitQueryFragment limit) {
       _aggregateColumnsAndFunctions = aggregateColumnsAndFunctions;
@@ -545,20 +592,26 @@ public class QueryGenerator {
     }
   }
 
-  /// Most basic query fragment.
+  /**
+   * Most basic query fragment.
+   */
   private static class StringQueryFragment implements QueryFragment {
     @Language("sql")
     final String _pinotQuery;
     @Language("sql")
     final String _h2Query;
 
-    /// Constructor with same Pinot and H2 query fragment.
+    /**
+     * Constructor with same Pinot and H2 query fragment.
+     */
     StringQueryFragment(@Language("sql") String query) {
       _pinotQuery = query;
       _h2Query = query;
     }
 
-    /// Constructor for `StringQueryFragment` with different Pinot and H2 query fragment.
+    /**
+     * Constructor for <code>StringQueryFragment</code> with different Pinot and H2 query fragment.
+     */
     StringQueryFragment(@Language("sql") String pinotQuery, @Language("sql") String h2Query) {
       _pinotQuery = pinotQuery;
       _h2Query = h2Query;
@@ -575,9 +628,12 @@ public class QueryGenerator {
     }
   }
 
-  /// Limit query fragment for selection queries.
-  ///
-  /// - SELECT ... FROM ... WHERE ... 'LIMIT ...'
+  /**
+   * Limit query fragment for selection queries.
+   * <ul>
+   *   <li>SELECT ... FROM ... WHERE ... 'LIMIT ...'</li>
+   * </ul>
+   */
   private static class LimitQueryFragment extends StringQueryFragment {
     LimitQueryFragment(int limit) {
       // When limit is MAX_RESULT_LIMIT, construct query without LIMIT.
@@ -586,9 +642,12 @@ public class QueryGenerator {
     }
   }
 
-  /// Order by query fragment for aggregation queries.
-  ///
-  /// - SELECT ... FROM ... WHERE ... 'ORDER BY ...'
+  /**
+   * Order by query fragment for aggregation queries.
+   * <ul>
+   *   <li>SELECT ... FROM ... WHERE ... 'ORDER BY ...'</li>
+   * </ul>
+   */
   private static class OrderByQueryFragment extends StringQueryFragment {
     OrderByQueryFragment(Set<String> columns) {
       super(columns.isEmpty() ? "" : "ORDER BY " + StringUtils.join(columns, ", "),
@@ -597,17 +656,22 @@ public class QueryGenerator {
     }
   }
 
-  /// Predicate query fragment.
-  ///
-  /// - SELECT ... FROM ... 'WHERE ...'
+  /**
+   * Predicate query fragment.
+   * <ul>
+   *   <li>SELECT ... FROM ... 'WHERE ...'</li>
+   * </ul>
+   */
   private static class PredicateQueryFragment implements QueryFragment {
     final List<QueryFragment> _predicates;
     final List<QueryFragment> _operators;
 
-    /// Constructor for `PredicateQueryFragment`.
-    ///
-    /// @param predicates predicates.
-    /// @param operators operators between predicates.
+    /**
+     * Constructor for <code>PredicateQueryFragment</code>.
+     *
+     * @param predicates predicates.
+     * @param operators operators between predicates.
+     */
     PredicateQueryFragment(List<QueryFragment> predicates, List<QueryFragment> operators) {
       _predicates = predicates;
       _operators = operators;
@@ -652,9 +716,12 @@ public class QueryGenerator {
     }
   }
 
-  /// Having query fragment.
-  ///
-  /// - SELECT ... FROM ... WHERE ... GROUP BY ... 'HAVING ...'
+  /**
+   * Having query fragment.
+   * <ul>
+   *   <li>SELECT ... FROM ... WHERE ... GROUP BY ... 'HAVING ...'</li>
+   * </ul>
+   */
   private static class HavingQueryFragment implements QueryFragment {
     final List<String> _havingClauseAggregationFunctions;
     final List<String> _havingClauseOperatorsAndValues;
@@ -720,9 +787,12 @@ public class QueryGenerator {
     }
   }
 
-  /// Strategy to generate selection queries.
-  ///
-  /// - SELECT a, b FROM table WHERE a = 'foo' AND b = 'bar' ORDER BY c LIMIT 10
+  /**
+   * Strategy to generate selection queries.
+   * <ul>
+   *   <li>SELECT a, b FROM table WHERE a = 'foo' AND b = 'bar' ORDER BY c LIMIT 10</li>
+   * </ul>
+   */
   private class SelectionQueryGenerationStrategy implements QueryGenerationStrategy {
 
     @Override
@@ -756,9 +826,12 @@ public class QueryGenerator {
     }
   }
 
-  /// Strategy to generate aggregation queries.
-  ///
-  /// - SELECT SUM(a), MAX(b) FROM table WHERE a = 'foo' AND b = 'bar' GROUP BY c TOP 10
+  /**
+   * Strategy to generate aggregation queries.
+   * <ul>
+   *   <li>SELECT SUM(a), MAX(b) FROM table WHERE a = 'foo' AND b = 'bar' GROUP BY c TOP 10</li>
+   * </ul>
+   */
   private class AggregationQueryGenerationStrategy implements QueryGenerationStrategy {
 
     @Override
@@ -798,8 +871,8 @@ public class QueryGenerator {
       ArrayList<String> arrayOfAggregationColumnsAndFunctions = new ArrayList<>(aggregationColumnsAndFunctions);
       HavingQueryFragment havingPredicate;
       if (isDistinctQuery) {
-        havingPredicate = new HavingQueryFragment(List.of(), List.of(),
-            List.of());
+        havingPredicate = new HavingQueryFragment(Collections.emptyList(), Collections.emptyList(),
+            Collections.emptyList());
       } else {
         havingPredicate = generateHavingPredicate(arrayOfAggregationColumnsAndFunctions);
       }
@@ -817,9 +890,11 @@ public class QueryGenerator {
           limit);
     }
 
-    /// Helper method to generate a having predicate query fragment.
-    ///
-    /// @return generated predicate query fragment.
+    /**
+     * Helper method to generate a having predicate query fragment.
+     *
+     * @return generated predicate query fragment.
+     */
     private HavingQueryFragment generateHavingPredicate(ArrayList<String> arrayOfAggregationColumnsAndFunctions) {
       //Generate a HAVING clause for group by query
       List<String> havingClauseAggregationFunctions = new ArrayList<>();
@@ -900,7 +975,9 @@ public class QueryGenerator {
     }
   }
 
-  /// Generator for single-value column comparison predicate query fragment.
+  /**
+   * Generator for single-value column comparison predicate query fragment.
+   */
   private class SingleValueComparisonPredicateGenerator implements PredicateGenerator {
 
     @Override
@@ -912,7 +989,9 @@ public class QueryGenerator {
     }
   }
 
-  /// Generator for single-value column `IN` predicate query fragment.
+  /**
+   * Generator for single-value column <code>IN</code> predicate query fragment.
+   */
   private class SingleValueInPredicateGenerator implements PredicateGenerator {
 
     @Override
@@ -937,7 +1016,9 @@ public class QueryGenerator {
     }
   }
 
-  /// Generator for single-value column `BETWEEN` predicate query fragment.
+  /**
+   * Generator for single-value column <code>BETWEEN</code> predicate query fragment.
+   */
   private class SingleValueBetweenPredicateGenerator implements PredicateGenerator {
 
     @Override
@@ -951,7 +1032,9 @@ public class QueryGenerator {
     }
   }
 
-  /// Generator for single-value column `REGEX` predicate query fragment.
+  /**
+   * Generator for single-value column <code>REGEX</code> predicate query fragment.
+   */
   private class SingleValueRegexPredicateGenerator implements PredicateGenerator {
     Random _random = new Random();
 
@@ -980,9 +1063,10 @@ public class QueryGenerator {
     }
   }
 
-  /// Generator for multi-value column comparison predicate query fragment.
-  ///
-  /// DO NOT SUPPORT '`NOT EQUAL`'.
+  /**
+   * Generator for multi-value column comparison predicate query fragment.
+   * <p>DO NOT SUPPORT '<code>NOT EQUAL</code>'.
+   */
   private class MultiValueComparisonPredicateGenerator implements PredicateGenerator {
 
     @Override
@@ -1008,9 +1092,10 @@ public class QueryGenerator {
     }
   }
 
-  /// Generator for multi-value column `IN` predicate query fragment.
-  ///
-  /// DO NOT SUPPORT '`NOT IN`'.
+  /**
+   * Generator for multi-value column <code>IN</code> predicate query fragment.
+   * <p>DO NOT SUPPORT '<code>NOT IN</code>'.
+   */
   private class MultiValueInPredicateGenerator implements PredicateGenerator {
 
     @Override
@@ -1036,7 +1121,9 @@ public class QueryGenerator {
     }
   }
 
-  /// Generator for multi-value column `BETWEEN` predicate query fragment.
+  /**
+   * Generator for multi-value column <code>BETWEEN</code> predicate query fragment.
+   */
   private class MultiValueBetweenPredicateGenerator implements PredicateGenerator {
 
     @Override
