@@ -20,6 +20,7 @@ package org.apache.pinot.perf.aggregation;
 
 import it.unimi.dsi.fastutil.ints.IntSet;
 import java.math.BigDecimal;
+import java.util.Collections;
 import java.util.Map;
 import java.util.Random;
 import java.util.concurrent.TimeUnit;
@@ -50,10 +51,13 @@ import org.openjdk.jmh.runner.options.OptionsBuilder;
 import org.roaringbitmap.RoaringBitmap;
 
 
-/// Benchmark for DistinctCountSmartHLLAggregationFunction with dictionary-encoded columns.
-///
-/// Tests the performance impact of adaptive RoaringBitmap → HLL conversion strategy
-/// across different cardinality ratios and data scales.
+/**
+ * Benchmark for DistinctCountSmartHLLAggregationFunction with dictionary-encoded columns.
+ *
+ * <p>Tests the performance impact of adaptive RoaringBitmap → HLL conversion strategy
+ * across different cardinality ratios and data scales.
+ *
+ */
 @Fork(0)
 @BenchmarkMode(Mode.AverageTime)
 @Warmup(iterations = 2, time = 5, timeUnit = TimeUnit.SECONDS)
@@ -103,7 +107,7 @@ public class BenchmarkDistinctCountHLLThreshold {
     for (int i = 0; i < _numBatches; i++) {
       int[] dictIds = _batchedDictIds[i];
       Map<ExpressionContext, BlockValSet> blockValSetMap =
-          Map.of(EXPR, new TestBlockValSet(_dictionary, dictIds));
+          Collections.singletonMap(EXPR, new TestBlockValSet(_dictionary, dictIds));
       _aggregationFunction.aggregate(dictIds.length, resultHolder, blockValSetMap);
     }
 
