@@ -18,6 +18,7 @@
  */
 package org.apache.pinot.plugin.stream.kafka;
 
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -107,7 +108,7 @@ public class KafkaPartitionSubsetUtilsTest {
 
   @Test
   public void testGetPartitionIdsFromConfigEmptyMap() {
-    List<Integer> result = KafkaPartitionSubsetUtils.getPartitionIdsFromConfig(Map.of());
+    List<Integer> result = KafkaPartitionSubsetUtils.getPartitionIdsFromConfig(Collections.emptyMap());
     Assert.assertNull(result);
   }
 
