@@ -21,6 +21,7 @@ package org.apache.pinot.query.runtime.operator;
 import com.google.common.annotations.VisibleForTesting;
 import com.google.common.base.Preconditions;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashMap;
 import java.util.List;
@@ -59,14 +60,16 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 
-/// AggregateOperator is used to aggregate values over a (potentially empty) set of group by keys in V2/MSQE.
-/// Output data will be in the format of \[group by key, aggregate result1, ... aggregate resultN\]
-/// When the list of aggregation calls is empty, this class is used to calculate distinct result based on group by keys.
+/**
+ * AggregateOperator is used to aggregate values over a (potentially empty) set of group by keys in V2/MSQE.
+ * Output data will be in the format of [group by key, aggregate result1, ... aggregate resultN]
+ * When the list of aggregation calls is empty, this class is used to calculate distinct result based on group by keys.
+ */
 public class AggregateOperator extends MultiStageOperator {
   private static final Logger LOGGER = LoggerFactory.getLogger(AggregateOperator.class);
   private static final String EXPLAIN_NAME = "AGGREGATE_OPERATOR";
   private static final CountAggregationFunction COUNT_STAR_AGG_FUNCTION =
-      new CountAggregationFunction(List.of(ExpressionContext.forIdentifier("*")), false);
+      new CountAggregationFunction(Collections.singletonList(ExpressionContext.forIdentifier("*")), false);
 
   private final MultiStageOperator _input;
   private final DataSchema _resultSchema;
@@ -84,13 +87,16 @@ public class AggregateOperator extends MultiStageOperator {
 
   // trimming - related members
   private final int _groupTrimSize;
-  /// Comparator is used in priority queue, and the order is reversed so that peek() returns the smallest row to be
-  /// compared with other rows.
+  /**
+   * Comparator is used in priority queue, and the order is reversed so that peek() returns the smallest row to be
+   * compared with other rows.
+   */
   @Nullable
   private final Comparator<Object[]> _comparator;
 
   public AggregateOperator(OpChainExecutionContext context, MultiStageOperator input, AggregateNode node) {
     super(context);
+    _input = input;
     _resultSchema = node.getDataSchema();
     _aggFunctions = getAggFunctions(node.getAggCalls());
     int numFunctions = _aggFunctions.length;
@@ -104,10 +110,7 @@ public class AggregateOperator extends MultiStageOperator {
       maxFilterArgId = Math.max(maxFilterArgId, filterArgIds[i]);
     }
 
-    /// Grouping-set aggregates never reach this operator directly: PlanNodeToOpChain pre-wraps the input in a
-    /// RepeatOperator and rewrites the node into the equivalent plain GROUP BY over the expanded input.
     List<Integer> groupKeys = node.getGroupKeys();
-    _input = input;
 
     int groupTrimSize = Integer.MAX_VALUE;
     Comparator<Object[]> comparator = null;
@@ -260,9 +263,11 @@ public class AggregateOperator extends MultiStageOperator {
     return new StatMap<>(_statMap);
   }
 
-  /// Consumes the input blocks as a group by
-  ///
-  /// @return the last block, which must always be either an error or the end of the stream
+  /**
+   * Consumes the input blocks as a group by
+   *
+   * @return the last block, which must always be either an error or the end of the stream
+   */
   private MseBlock.Eos consumeGroupBy() {
     assert _groupByExecutor != null;
     MseBlock block = _input.nextBlock();
@@ -274,9 +279,11 @@ public class AggregateOperator extends MultiStageOperator {
     return (MseBlock.Eos) block;
   }
 
-  /// Consumes the input blocks as an aggregation
-  ///
-  /// @return the last block, which must always be either an error or the end of the stream
+  /**
+   * Consumes the input blocks as an aggregation
+   *
+   * @return the last block, which must always be either an error or the end of the stream
+   */
   private MseBlock.Eos consumeAggregation() {
     assert _aggregationExecutor != null;
     MseBlock block = _input.nextBlock();
@@ -370,7 +377,7 @@ public class AggregateOperator extends MultiStageOperator {
     List<ExpressionContext> expressions = aggFunction.getInputExpressions();
     int numExpressions = expressions.size();
     if (numExpressions == 0) {
-      return Map.of();
+      return Collections.emptyMap();
     }
     DataSchema dataSchema = block.getDataSchema();
     assert dataSchema != null;
@@ -403,7 +410,7 @@ public class AggregateOperator extends MultiStageOperator {
     List<ExpressionContext> expressions = aggFunction.getInputExpressions();
     int numExpressions = expressions.size();
     if (numExpressions == 0) {
-      return Map.of();
+      return Collections.emptyMap();
     }
     DataSchema dataSchema = block.getDataSchema();
     assert dataSchema != null;
@@ -474,9 +481,13 @@ public class AggregateOperator extends MultiStageOperator {
         return Math.max(value1, value2);
       }
     },
-    /// Allocated memory in bytes for this operator or its children in the same stage.
+    /**
+     * Allocated memory in bytes for this operator or its children in the same stage.
+     */
     ALLOCATED_MEMORY_BYTES(StatMap.Type.LONG),
-    /// Time spent on GC while this operator or its children in the same stage were running.
+    /**
+     * Time spent on GC while this operator or its children in the same stage were running.
+     */
     GC_TIME_MS(StatMap.Type.LONG);
 
     private final StatMap.Type _type;
