@@ -21,6 +21,7 @@ package org.apache.pinot.segment.local.segment.index.inverted;
 
 import com.google.common.base.Preconditions;
 import java.io.IOException;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import javax.annotation.Nullable;
@@ -61,7 +62,7 @@ public class InvertedIndexType
     extends AbstractIndexType<IndexConfig, InvertedIndexReader, DictionaryBasedInvertedIndexCreator> {
   public static final String INDEX_DISPLAY_NAME = "inverted";
   private static final List<String> EXTENSIONS =
-      List.of(V1Constants.Indexes.BITMAP_INVERTED_INDEX_FILE_EXTENSION);
+      Collections.singletonList(V1Constants.Indexes.BITMAP_INVERTED_INDEX_FILE_EXTENSION);
 
   protected InvertedIndexType() {
     super(StandardIndexes.INVERTED_ID);
@@ -169,11 +170,13 @@ public class InvertedIndexType
     private ReaderFactory() {
     }
 
-    /// Creates a [InvertedIndexReader].
-    ///
-    /// Unless [#createSkippingForward(SegmentDirectory.Reader, ColumnMetadata)], this method first try to use the
-    /// forward index reader in case it is also an inverted index. That is the case, for example, when the column is
-    /// sorted and single value.
+    /**
+     * Creates a {@link InvertedIndexReader}.
+     *
+     * Unless {@link #createSkippingForward(SegmentDirectory.Reader, ColumnMetadata)}, this method first try to use the
+     * forward index reader in case it is also an inverted index. That is the case, for example, when the column is
+     * sorted and single value.
+     */
     @Override
     public InvertedIndexReader createIndexReader(SegmentDirectory.Reader segmentReader,
         FieldIndexConfigs fieldIndexConfigs, ColumnMetadata metadata)
@@ -195,10 +198,12 @@ public class InvertedIndexType
       }
     }
 
-    /// Directly creates a [InvertedIndexReader].
-    ///
-    /// Unless [#createIndexReader], this method always tries to create the actual inverted index reader instead
-    /// of try to use the forward index when the column is sorted and single value.
+    /**
+     * Directly creates a {@link InvertedIndexReader}.
+     *
+     * Unless {@link #createIndexReader}, this method always tries to create the actual inverted index reader instead of
+     * try to use the forward index when the column is sorted and single value.
+     */
     public InvertedIndexReader createSkippingForward(SegmentDirectory.Reader segmentReader, ColumnMetadata metadata)
         throws IOException {
       if (!metadata.hasDictionary()) {
