@@ -19,6 +19,7 @@
 package org.apache.pinot.segment.local.segment.creator.impl.stats;
 
 import java.math.BigDecimal;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -48,7 +49,7 @@ public class MapColumnPreIndexStatsCollectorTest {
         .setTableName("testTable")
         .setOptimizeNoDictStatsCollection(optimiseNoDictStatsCollection)
         .setSegmentPartitionConfig(new SegmentPartitionConfig(
-            Map.of("col", new ColumnPartitionConfig("murmur", 4))))
+            Collections.singletonMap("col", new ColumnPartitionConfig("murmur", 4))))
         .setNoDictionaryColumns(List.of("col"))
         .build();
 
