@@ -24,6 +24,7 @@ import java.io.File;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import org.apache.commons.io.FileUtils;
 import org.apache.pinot.segment.spi.index.creator.VectorIndexConfig;
@@ -33,7 +34,9 @@ import org.testng.annotations.BeforeMethod;
 import org.testng.annotations.Test;
 
 
-/// Unit tests for [IvfPqIndexFormat].
+/**
+ * Unit tests for {@link IvfPqIndexFormat}.
+ */
 public class IvfPqIndexFormatTest {
   private File _tempDir;
 
@@ -67,13 +70,13 @@ public class IvfPqIndexFormatTest {
     int[] subvectorLengths = {2, 2};
     @SuppressWarnings("unchecked")
     List<Integer>[] listDocIds = new List[]{
-        List.of(11),
-        List.of(7)
+        Collections.singletonList(11),
+        Collections.singletonList(7)
     };
     @SuppressWarnings("unchecked")
     List<byte[]>[] listCodes = new List[]{
-        List.of(new byte[]{1, 2}),
-        List.of(new byte[]{3, 4})
+        Collections.singletonList(new byte[]{1, 2}),
+        Collections.singletonList(new byte[]{3, 4})
     };
 
     IvfPqIndexFormat.write(indexFile, 4, 2, 2, 4, 32, 123L, VectorIndexConfig.VectorDistanceFunction.COSINE,
@@ -121,13 +124,13 @@ public class IvfPqIndexFormatTest {
     int[] subvectorLengths = {2, 2};
     @SuppressWarnings("unchecked")
     List<Integer>[] listDocIds = new List[]{
-        List.of(11),
-        List.of(7)
+        Collections.singletonList(11),
+        Collections.singletonList(7)
     };
     @SuppressWarnings("unchecked")
     List<byte[]>[] listCodes = new List[]{
-        List.of(new byte[]{1, 2}),
-        List.of(new byte[]{3, 4})
+        Collections.singletonList(new byte[]{1, 2}),
+        Collections.singletonList(new byte[]{3, 4})
     };
 
     writeLegacyBigEndianIndex(indexFile, 4, 2, 2, 4, 32, 123L, VectorIndexConfig.VectorDistanceFunction.COSINE,
