@@ -20,6 +20,7 @@ package org.apache.pinot.tools;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -28,7 +29,7 @@ import org.apache.pinot.tools.admin.PinotAdministrator;
 import org.apache.pinot.tools.admin.command.QuickstartRunner;
 
 
-public class ColocatedJoinQuickStart extends Quickstart {
+public class ColocatedJoinQuickStart extends MultistageEngineQuickStart {
   private static final String QUICKSTART_IDENTIFIER = "COLOCATED_JOIN";
   private static final String[] COLOCATED_JOIN_DIRECTORIES = new String[]{
       "examples/batch/colocated/userAttributes", "examples/batch/colocated/userGroups",
@@ -80,7 +81,7 @@ public class ColocatedJoinQuickStart extends Quickstart {
 
   @Override
   public List<String> types() {
-    return List.of(QUICKSTART_IDENTIFIER);
+    return Collections.singletonList(QUICKSTART_IDENTIFIER);
   }
 
   @Override
